# cfm-reslib

./: .gitignore  .readthedocs.yml  .travis.yml  Makefile  Pipfile  README.md  build.py  gendoc.py  make.bat  publish-bucket-template.json  pyproject.toml
cfmreslib/: __init__.py  base.py  boto.py  docs.py  reslib.py  resources.py
docs/: conf.py  dev.rst  index.rst  instructions.rst
docs/_static/js/: github.js
src/: reslib.py
src/tests/: test_boto_method.py
tests/: test_boto_method.py
